Fixed text alignment on mobile

--- a/src/styles/Error.css
+++ b/src/styles/Error.css
@@ -5,3 +5,7 @@
   color: #fff;
   font-weight: 800;
 }
+
+.error p {
+  text-align: center;
+}
